# hole_monitor

./: CMakeLists.txt  Groups.qml  Lists.qml  Login.qml  Logs.qml  Main.qml  MainMenu.qml  README.md  Settings.qml  Statistics.qml  main.cpp  pihole_api.cpp  pihole_api.h
